<resources>
    <string name="app_name">VeículoVerso - Isabela Taques Vitek</string>
    <string name="login">LOGIN</string>
    <string name="logout">Sair</string>
    <string name="default_web_client_id">37165123431-uec0e2t83s88k9vk88cbumm951lvtl79.apps.googleusercontent.com</string>
    <string name="sign_in_with_google">Entrar com Google</string>
    <string name="enter_phone_number">Número de Telefone</string>
    <string name="send_code">Enviar Código</string>
    <string name="verify_code">Verificar Código</string>
    <string name="salvar_alteracoes">Salvar alterações</string>
    <string name="nome_do_carro">Nome do carro</string>
    <string name="ano_do_carro">Ano do carro</string>
    <string name="placa">Placa</string>
    <string name="url_da_imagem">URL da imagem</string>
    <string name="capturar_imagem">Capturar Imagem</string>
    <string name="imagem_capturada">Imagem Capturada</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="imagem_do_carro">Imagem do carro</string>
    <string name="deletar_carro">Deletar carro</string>
    <string name="carro_adicionado_sucesso">Carro adicionado com sucesso!</string>
    <string name="localizacao_selecionada">Localização selecionada</string>
    <string name="preencha_todos_campos">Preencha todos os campos e selecione uma localização</string>
    <string name="carro_atualizado_com_sucesso">Carro atualizado com sucesso!</string>
    <string name="carro_deletado_com_sucesso">Carro deletado com sucesso!</string>
    <string name="confirmacao_deletar_carro">Você tem certeza que deseja deletar este carro?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="location_permission_denied">Permissão de localização negada</string>
    <string name="google_sign_in_failed">Falha no login com Google</string>
    <string name="google">Google</string>
    <string name="numero_telefone_valido">Por favor, insira um número de telefone válido</string>
    <string name="telefone">Phone Number</string>
    <string name="codigo_enviado">Código de verificação enviado</string>
    <string name="insira_o_codigo_de_verificacao">Por favor, insira o código de verificação</string>
    <string name="erro_salvar_carro">Erro ao salvar o carro</string>
    <string name="erro_carregar_detalhes_carro">Erro ao carregar os detalhes do carro</string>
    <string name="erro_atualizar_carro">Erro ao salvar as alterações</string>
    <string name="erro_deletar_carro">Erro ao deletar o carro</string>
    <string name="erro_carregando_dados">Erro ao buscar dados</string>
    <string name="erro_nao_encontrado">Erro não encontrado</string>
    <string name="erro_de_verificacao_telefone">Falha no envio do código: Telefone incorreto ou fora do formato válido.</string>
    <string name="codigo_verificacao_invalido">Código de verificação inválido. Por favor, tente novamente.</string>
    <string name="usuario_invalido">Usuário inválido ou número de telefone incorreto.</string>
    <string name="problema_conexao">Erro de conexão. Verifique sua internet e tente novamente.</string>
    <string name="erro_autenticacao">Erro de autenticação. Por favor, tente novamente.</string>
    <string name="erro_desconhecido">Erro desconhecido. Entre em contato com o suporte.</string>
    <string name="numero_telefone_invalido">Número de telefone inválido. Por favor, insira um número válido.</string>
    <string name="muitos_pedidos">Muitas tentativas de verificação. Tente novamente mais tarde.</string>
    <string name="erro_verificacao_telefone">Erro ao verificar o número de telefone. Tente novamente.</string>
</resources>